refactor: getFirst()를 get(0)으로 변경